--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <HTML>
 
 <HEAD>
@@ -88,7 +87,7 @@ Game Engines/Frameworks/APIs: Unity, XNA, Gamemaker Studio, Wintermute Engine, O
 <BR>
 <H1>Contact Information</H1>
 
-Email panoslennon@gmail.com<br>
+Email: panoslennon@gmail.com <br>
 
 
 
