--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Currently studying in Lodz(Poland) 3rd year Information Technology(B.Eng in Engl
 <img src="Images/Puki3.jpg" alt="Puki3" height="250" width="300">
 <img src="Images/Puki4.jpg" alt="Puki4" height="250" width="300">
 <BR><BR>
-<A HREF="http://www.igf.com/php-bin/entry2014.php?id=1940" target="_blank">Factory 59</A>-- My first game, a point n click adventure puzzle solving game based on the town I study and live(Lodz/Poland). It was done as student project for my second year of studies during the period of 3 mounths in a group of 4 people<BR><BR>
+<A HREF="http://www.igf.com/php-bin/entry2014.php?id=1940" target="_blank">Factory 59</A>-- My first game, a point n click adventure puzzle solving game based on the town I study and live(Lodz/Poland). It was done as a student project for my second year of studies during the period of 3 mounths in a group of 4 people<BR><BR>
 
 <embed
 width="420" height="345"
