--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <META name="description" content="Panajoti Rriskas's homepage.">
 
-
+<style>
+a {text-decoration:none;}
+</style>
 
 <TITLE>Panajoti Rriska</TITLE>
 
