--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ type="application/x-shockwave-flash">
 
 <H1>Current Projects</H1>
 <A HREF="http://cracov1500.wordpress.com/" target="_blank">Android Mobile Game(Titled: Cracov 1500)</A>-- Using Unity to create a Rythmic Music Game in a Team of 4 programmers and 2 animators. Responsible for Gameplay Programming and Level Design <BR><BR>
-<img src="Images/Puki1.jpg" alt="crc1" height="250" width="300">
-<img src="Images/Puki2.jpg" alt="crc2" height="250" width="300">
+<img src="Images/crc1.jpg" alt="crc1" height="250" width="300">
+<img src="Images/crc2.jpg" alt="crc2" height="250" width="300">
 
 <br>
 <H1>Software Projects</H1>
