--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@ a {text-decoration:none;}
 <H1>Panajoti Rriska</H1>
 
 
-
-Currently studying in Lodz(Poland) 3rd year Information Technology(B.Eng in English Language) at the Internation Faculty of Engineering .<br><br>
-
-
+Game Developer currently residing Lodz(Poland)
 
 
 <br>
@@ -39,7 +36,7 @@ Currently studying in Lodz(Poland) 3rd year Information Technology(B.Eng in Engl
 <H1>Video Games</H1>
 
 
-<A HREF="http://panajoti-rriska.itch.io/2359" target="_blank">2359-(Play it Online)</A>--My third game made for the Cyberpunk Game Jam 2014 during the period of 3 days. FPS parkour game with dynamic music and puzzles<BR><BR>
+<A HREF="http://panajoti-rriska.itch.io/2359" target="_blank">2359-(Play it Online)</A>--Made for the Cyberpunk Game Jam 2014 during the period of 3 days. FPS parkour game with dynamic music and puzzles<BR><BR>
 <img src="Images/PromoGame1.png" alt="Promo1" height="250" width="300">
 <img src="Images/PromoGame5.jpg" alt="Promo2" height="250" width="300">
 <img src="Images/Promo2Game.jpg" alt="Promo3" height="250" width="300">
@@ -47,13 +44,13 @@ Currently studying in Lodz(Poland) 3rd year Information Technology(B.Eng in Engl
 <BR><BR>
 
 
-<A HREF="https://app.box.com/s/z5pfhy94r52sxcytlwhj" target="_blank">Puki-(Download PC build)</A>-- My second game. 2d platform puzzle game with manipulation of time.(unfinished)<BR><BR>
+<A HREF="https://app.box.com/s/z5pfhy94r52sxcytlwhj" target="_blank">Puki-(Download PC build)</A>-- 2D platform puzzle game with manipulation of time.(unfinished)<BR><BR>
 <img src="Images/Puki1.jpg" alt="Puki1" height="250" width="300">
 <img src="Images/Puki2.jpg" alt="Puki2" height="250" width="300">
 <img src="Images/Puki3.jpg" alt="Puki3" height="250" width="300">
 <img src="Images/Puki4.jpg" alt="Puki4" height="250" width="300">
 <BR><BR>
-<A HREF="http://www.igf.com/php-bin/entry2014.php?id=1940" target="_blank">Factory 59</A>-- My first game, a point n click adventure puzzle solving game based on the town I study and live(Lodz/Poland). It was done as a student project for my second year of studies during the period of 3 mounths in a group of 4 people<BR><BR>
+<A HREF="http://www.igf.com/php-bin/entry2014.php?id=1940" target="_blank">Factory 59</A>-- Point n click adventure puzzle solving game based on the town I study and live(Lodz/Poland). It was done as a student project for my second year of studies during the period of 3 mounths in a group of 4 people<BR><BR>
 
 <embed
 width="420" height="345"
