--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a {text-decoration:none;}
 <H1>Panajoti Rriska</H1>
 
 
-Game Developer currently residing Lodz(Poland)
+Game Developer currently residing in Lodz(Poland)
 
 
 <br>
