--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@ a {text-decoration:none;}
 
 <H1>Panajoti Rriska</H1>
 
-
 Game Developer currently residing in Lodz(Poland)
-
 
 <br>
 
-<H1>Video Games</H1>
+<H1>Games(Personal Projects)</H1>
 
 
 <A HREF="http://panajoti-rriska.itch.io/2359" target="_blank">2359-(Play it Online)</A>--Made for the Cyberpunk Game Jam 2014 during the period of 3 days. FPS parkour game with dynamic music and puzzles<BR><BR>
@@ -62,11 +60,18 @@ type="application/x-shockwave-flash">
 <BR><BR><A HREF="https://app.box.com/s/9umc59s7fh9m2yavka3m" target="_blank"><mark>Download PC build</mark></A>
 
 
-<H1>Current Projects</H1>
-<A HREF="http://cracov1500.wordpress.com/" target="_blank">Android Mobile Game(Titled: Cracov 1500)</A>-- Using Unity to create a Rythmic Music Game in a Team of 4 programmers and 2 animators. Responsible for Gameplay Programming and Level Design <BR><BR>
+<H1>Games(Professional Projects)</H1>
+<A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game in a Team of 3 programmers and 2 animators. Responsible for Gameplay Programming and Level Design(not released yet) <BR><BR>
 <img src="Images/crc1.jpg" alt="crc1" height="250" width="300">
 <img src="Images/crc2.jpg" alt="crc2" height="250" width="300">
 <img src="Images/crc3.png" alt="crc3" height="250" width="300">
+
+<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--Responsible as a programmer for implementing new tools and new control systems<BR><BR>
+<embed
+width="420" height="345"
+src="https://www.youtube.com/watch?v=uunIGo3TzEg"
+type="application/x-shockwave-flash">
+</embed>
 
 <br>
 <H1>Software Projects</H1>
@@ -89,8 +94,7 @@ Game Engines/Frameworks/APIs: Unity, XNA, Gamemaker Studio, Wintermute Engine, O
 <H1>Contact Information</H1>
 
 Email: panoslennon@gmail.com <br>
-
-
+Twitter: @panoslennon
 
 <BR>
 <BR>
