--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ type="application/x-shockwave-flash">
 <img src="Images/crc1.jpg" alt="crc1" height="250" width="300">
 <img src="Images/crc2.jpg" alt="crc2" height="250" width="300">
 <img src="Images/crc3.png" alt="crc3" height="250" width="300">
-
+<BR><BR>
 <A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--Responsible as a programmer for implementing new tools and new control systems<BR><BR>
 <embed
 width="420" height="345"
-src="https://www.youtube.com/watch?v=uunIGo3TzEg"
+src="https://www.youtube.com/v/uunIGo3TzEg"
 type="application/x-shockwave-flash">
 </embed>
 
