--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ a {text-decoration:none;}
 <H1>Panajoti Rriska</H1>
 
 Game Developer currently residing in Lodz(Poland)
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5444fe484c0beef5" async></script>
 
 <br>
 
