--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@ Game Developer currently residing in Lodz(Poland)
 
 <br>
 
-<H1>Games(Personal Projects)</H1>
+<H1>Games(Individual and collaborative projects)</H1>
 
+<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Additional Programmer in a team of 7 people using XNA/C#.<BR><BR>
+<embed
+width="420" height="345"
+src="https://www.youtube.com/v/U5mKpAnPqNw"
+type="application/x-shockwave-flash">
+</embed>
+<BR><BR>
 
 <A HREF="http://panajoti-rriska.itch.io/2359" target="_blank">2359-(Play it Online)</A>--Made for the Cyberpunk Game Jam 2014 during the period of 3 days. FPS parkour game with dynamic music and puzzles<BR><BR>
 <img src="Images/PromoGame1.png" alt="Promo1" height="250" width="300">
@@ -63,12 +70,12 @@ type="application/x-shockwave-flash">
 
 
 <H1>Games(Professional Projects)</H1>
-<A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game in a Team of 3 programmers and 2 animators. Responsible for Gameplay Programming and Level Design(not released yet) <BR><BR>
+<A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game in a Team of 3 programmers and 2 animators. Responsible for Gameplay Programming and Level Design(not published yet) <BR><BR>
 <img src="Images/crc1.jpg" alt="crc1" height="250" width="300">
 <img src="Images/crc2.jpg" alt="crc2" height="250" width="300">
 <img src="Images/crc3.png" alt="crc3" height="250" width="300">
 <BR><BR>
-<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--Responsible as a programmer for implementing new tools and new control systems<BR><BR>
+<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--Responsible as a programmer for implementing new tools and new control systems(published)<BR><BR>
 <embed
 width="420" height="345"
 src="https://www.youtube.com/v/uunIGo3TzEg"
