--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Game Developer currently residing in Lodz(Poland)
 
 <H1>Games(Individual and collaborative projects)</H1>
 
-<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Additional Programmer in a team of 7 people using XNA/C#.<BR><BR>
+<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Additional Programmer in a team of 7 people using XNA/C#. This project won first place at the  the 6th computer games creation contest at Technical University of Lodz(ZTGK 2014)<BR><BR>
 <embed
 width="420" height="345"
 src="https://www.youtube.com/v/U5mKpAnPqNw"
