--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <HTML>
 
-<HEAD>
+<head>
 
-<META name="description" content="Panajoti Rriskas's homepage.">
+<meta> name="description" content="Panajoti Rriskas's homepage.">
+<meta charset="utf-8">
+	<title>Personal Portofolio - Panajoti Rriska</title>
+	<meta name="description" content="Personal Portofolio">
+	<meta name="author" content="Panajoti Rriska">
+	<meta name="apple-mobile-web-app-capable" content="yes" />  
 
-<style>
-a {text-decoration:none;}
-</style>
+	<!-- Mobile Specific Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+
 
 <TITLE>Panajoti Rriska</TITLE>
 
-</HEAD>
+</head>
 
 <BODY BGCOLOR=#FFFFFF TEXT=#000000 LINK=#0000FF VLINK=#0000FF>
 
@@ -28,10 +36,9 @@ a {text-decoration:none;}
 <H1>Panajoti Rriska</H1>
 
 Game Developer currently residing in Lodz(Poland)
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5444fe484c0beef5" async></script>
 
 <br>
+
 
 <H1>Games(Individual and collaborative projects)</H1>
 
