--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<HTML>
+<html>
 
 <head>
 
@@ -26,9 +26,6 @@
 <TR VALIGN=TOP>
 
 <TD>
-
-
-
 
 <HR>
 
@@ -115,9 +112,6 @@ Twitter: @panoslennon
 <BR>
 
 
-
-
-
 <br>
 <br>
 <br>
@@ -141,7 +135,7 @@ last updated on 26/4/14.
 </TABLE>
 </BODY>
 
-</HTML>
+</html>
 
 
 
