--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-<meta charset="utf-8">
-	<title>Personal Portofolio - Panajoti Rriska</title>
-	<meta name="description" content="Personal Portofolio">
-	<meta name="author" content="Panajoti Rriska">
+	<meta charset="utf-8">
+	<title>The Art of Rik Catlow - RIKCAT DOTCOM</title>
+	<meta name="description" content="The Paintings of Rik Catlow">
+	<meta name="author" content="Rik Catlow">
 	<meta name="apple-mobile-web-app-capable" content="yes" />  
 
 	<!-- Mobile Specific Metas -->
@@ -13,11 +12,12 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
-
-
-<TITLE>Panajoti Rriska</TITLE>
+	<!-- Favicons -->
+	<link rel="shortcut icon" href="_img/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="_img/144.png" />
 
 </head>
+
 <body class="home">
 	
 	
@@ -80,6 +80,7 @@
 
 	
 </body>
+
 
 </html>
 
