--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-	<meta charset="utf-8">
-	<title>The Art of Rik Catlow - RIKCAT DOTCOM</title>
-	<meta name="description" content="The Paintings of Rik Catlow">
-	<meta name="author" content="Rik Catlow">
+
+<meta charset="utf-8">
+	<title>Personal Portofolio - Panajoti Rriska</title>
+	<meta name="description" content="Personal Portofolio">
+	<meta name="author" content="Panajoti Rriska">
 	<meta name="apple-mobile-web-app-capable" content="yes" />  
 
 	<!-- Mobile Specific Metas -->
@@ -12,75 +13,127 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<!-- Favicons -->
-	<link rel="shortcut icon" href="_img/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="_img/144.png" />
+
+
+<TITLE>Panajoti Rriska</TITLE>
 
 </head>
 
-<body class="home">
-	
-	
-	<div class="wrapper">
-		
-		<div class="header">
-		
-			<a href="/" class="logo">rikcat</a>
-	
-			<ul class="nav">
-				<li><a href="/" class="selected" >home</a><span>&nbsp;/&nbsp;</span></li>
-				<li><a href="work/" >work</a><span>&nbsp;/&nbsp;</span></li>
-				<li><a href="about/" >about</a></li>
+<BODY BGCOLOR=#FFFFFF TEXT=#000000 LINK=#0000FF VLINK=#0000FF>
 
-			</ul>
-			
-			</div>
-			
-	
-			<a href="http://society6.com/rikcat"><div class="promo">Prints for sale at Society6</div></a>
+<TABLE WIDTH=100%>
 
-			
-		<p class="welcome">Hi, i'm Rik Catlow, designer & artist living in Austin, TX. To get updates follow me on <a href="http://twitter.com/rikcat">twitter</a> or join my <a href="about/mailinglist.html">mailing list</a>. I also hang out at <a href="http://rikcat.etsy.com">etsy</a>, <a href="http://www.pinterest.com/rikcat/my-artwork/">pinterest</a>, <a href="http://www.flickr.com/photos/rikcat/">flickr</a>, <a href="http://instagram.com/rikcat">instagram</a>, <a href="http://rikcat.tumblr.com/">tumblr</a>, <a href="http://dribbble.com/rikcat/">dribbble</a>, and <a href="http://www.linkedin.com/in/rikcatlow">linkedin</a>.
-</p>
-	<!-- 
-		<div class="hero home_hero">
-		#iliketodrawuglypeople
-		</div> -->
+<TR VALIGN=TOP>
 
-	
-	<div class="footer">
-			<p>Copyright 2014 <a href="mailto:rik.catlow@gmail.com">Rik Catlow</a></p>
+<TD>
 
-		<ul>
-			<li><span>&nbsp;## </span><a href="http://twitter.com/rikcat" >twitter</a></li>
-			<li><span>&nbsp;## </span><a href="http://rikcat.etsy.com" >etsy</a></li>
-			<li><span>&nbsp;## </span><a href="http://www.pinterest.com/rikcat/my-artwork/" >pinterest</a></li>
-			<li><span>&nbsp;## </span><a href="https://www.flickr.com/photos/rikcat/" >flickr</a></li>
+<HR>
 
-		</ul>
-		
-	</div>
+<H1>Panajoti Rriska</H1>
 
-	</div>
+Game Developer currently residing in Lodz(Poland)
 
-	
-<script type="text/javascript">
+<br>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-91523-2']);
-  _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+<H1>Games(Individual and collaborative projects)</H1>
 
-</script>
+<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Additional Programmer in a team of 7 people using XNA/C#. This project won first place at the  the 6th computer games creation contest at Technical University of Lodz(ZTGK 2014)<BR><BR>
+<embed
+width="420" height="345"
+src="https://www.youtube.com/v/U5mKpAnPqNw"
+type="application/x-shockwave-flash">
+</embed>
+<BR><BR>
 
-	
-</body>
+<A HREF="http://panajoti-rriska.itch.io/2359" target="_blank">2359-(Play it Online)</A>--Made for the Cyberpunk Game Jam 2014 during the period of 3 days. FPS parkour game with dynamic music and puzzles<BR><BR>
+<img src="Images/PromoGame1.png" alt="Promo1" height="250" width="300">
+<img src="Images/PromoGame5.jpg" alt="Promo2" height="250" width="300">
+<img src="Images/Promo2Game.jpg" alt="Promo3" height="250" width="300">
+<img src="Images/Promo3.png" alt="Promo4" height="250" width="300">
+<BR><BR>
 
+
+<A HREF="https://app.box.com/s/z5pfhy94r52sxcytlwhj" target="_blank">Puki-(Download PC build)</A>-- 2D platform puzzle game with manipulation of time.(unfinished)<BR><BR>
+<img src="Images/Puki1.jpg" alt="Puki1" height="250" width="300">
+<img src="Images/Puki2.jpg" alt="Puki2" height="250" width="300">
+<img src="Images/Puki3.jpg" alt="Puki3" height="250" width="300">
+<img src="Images/Puki4.jpg" alt="Puki4" height="250" width="300">
+<BR><BR>
+<A HREF="http://www.igf.com/php-bin/entry2014.php?id=1940" target="_blank">Factory 59</A>-- Point n click adventure puzzle solving game based on the town I study and live(Lodz/Poland). It was done as a student project for my second year of studies during the period of 3 mounths in a group of 4 people<BR><BR>
+
+<embed
+width="420" height="345"
+src="http://www.youtube.com/v/IkuQGjZaK_w"
+type="application/x-shockwave-flash">
+</embed>
+<BR><BR>
+<mark>-Role:</mark> Story Director, Programming, Level Design, 2D Graphics , Sound
+<BR><BR><A HREF="https://app.box.com/s/9umc59s7fh9m2yavka3m" target="_blank"><mark>Download PC build</mark></A>
+
+
+<H1>Games(Professional Projects)</H1>
+<A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game in a Team of 3 programmers and 2 animators. Responsible for Gameplay Programming and Level Design(not published yet) <BR><BR>
+<img src="Images/crc1.jpg" alt="crc1" height="250" width="300">
+<img src="Images/crc2.jpg" alt="crc2" height="250" width="300">
+<img src="Images/crc3.png" alt="crc3" height="250" width="300">
+<BR><BR>
+<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--Responsible as a programmer for implementing new tools and new control systems(published)<BR><BR>
+<embed
+width="420" height="345"
+src="https://www.youtube.com/v/uunIGo3TzEg"
+type="application/x-shockwave-flash">
+</embed>
+
+<br>
+<H1>Software Projects</H1>
+
+<A HREF="https://app.box.com/s/o7ig2yllef4b5g1n9qkx" target="_blank">Named Entity Recognisition</A>-- A short presentation about my work on Named Entity Recognisition during my intership in Kosice(Slovakia) at the Technical University of Kosice using Python, Nltk and C++ during the period of 8 weeks.<BR><BR>
+
+<A HREF="https://app.box.com/s/4ske323v9pkiwuwfxxwy" target="_blank">OpenGl 3d Terrain</A>-- Using OpenGl with C++ to create 3D terrain applying textures and testing lighting and geometrical transformation. Also testing movemnt of character in FPS view <BR><BR>
+
+<A HREF="https://app.box.com/s/ud385kwpcvb46u79i7p9" target="_blank">Image Processing</A>-- Using OpenCV with C++ to explore different capabilities such as applying  Fourier Transform and Frequency Analysis on different images <BR><BR>
+
+<A HREF="https://app.box.com/s/9b9u7ynpz525oev6cs1d" target="_blank">DataBase Calendar</A>-- Using Java and Sqlite with NetBeans(for creation of GUI) to create a Calendar which is connected with a Database and checks users and events <BR><BR>
+
+<H1>Skills</H1>
+Languages: Greek, English, Polish, Albanian .<br><br>
+Code: C, C++, C#, Java, Python, HTML .<br><br>
+Code Software and Repository tools: Visual Studio, NetBeans, Eclipse, CodeBlocks, TortoiseSVN, Perforce.<br><br>
+Multimedia Software: Photoshop, Illustrator, FL Studio .<br><br>
+Game Engines/Frameworks/APIs: Unity, XNA, Gamemaker Studio, Wintermute Engine, OpenGL .<br><br>
+<BR>
+<H1>Contact Information</H1>
+
+Email: panoslennon@gmail.com <br>
+Twitter: @panoslennon
+
+<BR>
+<BR>
+
+
+<br>
+<br>
+<br>
+<br>
+
+</TD>
+</TR>
+</TABLE>
+
+<HR>
+<TABLE BORDER=0 WIDTH=100%>
+<TR>
+
+<TD ALIGN=LEFT VALIGN=TOP>
+last updated on 26/4/14.
+</TD>
+
+
+
+</TR>
+</TABLE>
+</BODY>
 
 </html>
 
