--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">Company</a>
+            <a class="pure-menu-heading" href="#"></a>
 
             <ul>
                 <li><a href="#">Home</a></li>
