--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
 
     <title>Side Menu &ndash; Layout Examples &ndash; Pure</title>
 
-    
-
-
+   
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 
-
-
-
-
-  
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="/combo/1.17.16?/css/layouts/side-menu-old-ie.css">
     <![endif]-->
@@ -56,13 +49,15 @@
 
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Portofolio</a></li>
 
                 <li class="menu-item-divided pure-menu-selected">
-                    <a href="#">Services</a>
+                    <a href="#">Resume/CV</a>
                 </li>
 
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Press</a></li>
+				
+				<li><a href="#">Contact</a></li>
             </ul>
         </div>
     </div>
