--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">Welcome</a>
+            <a class="pure-menu-heading" href="#"></a>
 
             <ul>
-                
+                <li><a href="#">Home</a></li>
+				
                 <li><a href="#">Portofolio</a></li>
 
                 <li class="menu-item-divided pure-menu-selected">
