--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 				
                 <li><a href="/backup/indexBackUp">Portofolio</a></li>
 
-                <li class="menu-item-divided pure-menu-selected">
-                    <a href="#">Resume/CV</a>
-                </li>
+                <li><a href="#">Resume/CV</a></li>
 
                 <li><a href="#">Press</a></li>
 				
