--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="content">
             <h2 class="content-subhead">Hello there</h2>
             <p>
-                Mpla mpla mpla
+			    I am a Game Dev currently residing in Lodz city of Poland. I love to work on Unity 
+				so I make most of my projects on it. I also love GameJams and making weird music from time to time(<a href="https://soundcloud.com/panos-lennon" alt="Side Menu CSS">You can check it out here</a>).
+                
             </p>
 
             <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
