--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2 class="content-subhead">Hello there</h2>
             <p>
 			    I am a Game Dev currently residing in Lodz city of Poland. I love to work on Unity 
-				so I make most of my projects on it. I also love GameJams and making weird music from time to time(<a href="https://soundcloud.com/panos-lennon" alt="Side Menu CSS">You can check it out here</a>).
+				so I make most of my projects on it. I also love GameJams and making weird music from time to time(<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
                 
             </p>
 
