--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="pure-g">
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/panos.jpg" alt="Panos">
+                    <img class="pure-img-responsive" src="" alt="Panos">
                 </div>
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
