--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			    I am a Game Dev and a Programmer currently residing in Lodz (Poland). I love to work on Unity (1,5 year of experience)
 				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
 				My experience varies from named entity recognition software to non-euclidean level design. You can find me around by my nickname Panos Lennon on social media etc.
-                
+                <img src="Images/PromoGame1.png" alt="Promo1" height="250" width="300">
             </p>
 
             <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
@@ -83,7 +83,7 @@
 
             <div class="pure-g">
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/crc2.jpg" alt="Panos">
+                    <img class="pure-img-responsive" src="Images/PromoGame1.png" alt="Panos">
                 </div>
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
