--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
                 <li><a href="#">Press</a></li>
 				
-				<li><a href="#">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -73,14 +72,14 @@
 			    I am a Game Dev and a Programmer currently residing in Lodz (Poland). I love to work on Unity (1,5 year of experience)
 				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
 				My experience varies from named entity recognition software to non-euclidean level design. You can find me around by my nickname Panos Lennon on social media etc.
-                <img src="Images/PromoGame1.png" alt="Promo1" height="250" width="300">
+                <img src="Images/panos.jpg" alt="Promo1" height="250" width="300">
             </p>
 
             <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
             <p>
                 mpla mpla
             </p>
-
+<!--
             <div class="pure-g">
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="Images/PromoGame1.png" alt="Panos">
@@ -95,10 +94,12 @@
                     <img class="pure-img-responsive" src="http://farm8.staticflickr.com/7357/9086701425_fda3024927.jpg" alt="Mountain">
                 </div>
             </div>
-
-            <h2 class="content-subhead">Try Resizing your Browser</h2>
+-->
+            <h2 class="content-subhead">Contact Info</h2>
             <p>
-                mpla mpla
+                Email: panoslennon@gmail.com
+				Twitter: @panoslennon
+				Facebook: panos lennon
             </p>
         </div>
     </div>
