--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 			    I am a Game Dev and a Programmer currently residing in Lodz (Poland). I love to work on Unity (1,5 year of experience)
 				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
 				My experience varies from named entity recognition software to non-euclidean level design. You can find me around by my nickname Panos Lennon on social media etc.
-                <img src="Images/panos.png" id="Promo1" height="350" width="500">
+         
 				<div id="wrapper" style="width:100%; text-align:center">
-				<img id="Promo1"/>
+				<img src="Images/panos.png" id="Promo1" height="350" width="500"/>
 				</div>
             </p>
 
