--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
             <h2 class="content-subhead">Contact Info</h2>
             <p>
                 Email: panoslennon@gmail.com
-				Twitter: @panoslennon
-				Facebook: panos lennon
+				<a href="https://www.facebook.com/panos.lennon"><img src="Images/facebook.gif"
+				alt="facebook"
+				width="72" height="46" border="0" /></a>
+				
             </p>
         </div>
     </div>
