--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 -->
             <h2 class="content-subhead">Contact Info</h2>
             <p>
-                Email: panoslennon@gmail.com &nbsp; &nbsp;
+                Email: panoslennon@gmail.com <br>
 				<a href="https://www.facebook.com/panos.lennon"><img src="Images/facebook.gif"
 				alt="facebook"
-				width="100" height="100" border="0" /></a>
+				width="80" height="80" border="0" /></a>
 				
             </p>
         </div>
