--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 -->
             <h2 class="content-subhead">Contact Info</h2>
             <p>
-                Email: panoslennon@gmail.com <br>
-				<a href="https://www.facebook.com/panos.lennon"><img src="Images/facebook.gif"
+                Email: panoslennon@gmail.com <br><br>
+				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/facebook.gif"
 				alt="facebook"
 				width="80" height="80" border="0" /></a>
 				
