--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/facebook.gif"
 				alt="facebook"
 				width="80" height="80" border="0" /></a>
+				<a href="https://twitter.com/Panoslennon" target="_blank"><img src="Images/twitter.png"
+				alt="facebook"
+				width="80" height="80" border="0" /></a>
 				
             </p>
         </div>
