--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 Email: panoslennon@gmail.com <br><br>
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/facebook.gif"
 				alt="facebook"
-				width="90" height="90" border="0" /></a>
+				width="80" height="80" border="0" /></a> &nbsp;
 				<a href="https://twitter.com/Panoslennon" target="_blank"><img src="Images/twitter.png"
 				alt="facebook"
 				width="80" height="80" border="0" /></a>
