--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                 Email: panoslennon@gmail.com <br><br>
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/facebook.gif"
 				alt="facebook"
-				width="80" height="80" border="0" /></a> <br><
+				width="80" height="80" border="0" /></a> 
+				
 				<a href="https://twitter.com/Panoslennon" target="_blank"><img src="Images/twitter.png"
 				alt="facebook"
 				width="75" height="75" border="0" /></a>
