--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<a href="https://twitter.com/Panoslennon" target="_blank"><img src="Images/twitter.png"
 				alt="facebook"
 				 /></a>
-				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/facebook.gif"
+				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/Facebook.png"
 				alt="facebook"
 				 /></a> 
 				
