--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
 -->
             <h2 class="content-subhead">Contact Info</h2>
             <p>
-                Email: panoslennon@gmail.com <br>
-				<a href="https://twitter.com/Panoslennon" target="_blank"><img src="Images/twitter.png"
-				alt="facebook"
-				 /></a>
+                Email: panoslennon@gmail.com <br><br>
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/Facebook.png"
 				alt="facebook"
-				 /></a> 
+				width="80" height="80" border="0" /></a> 
+				
+				<a href="https://twitter.com/Panoslennon" target="_blank"><img src="Images/twitter.png"
+				alt="twitter"
+				width="80" height="80" border="0" /></a>
 				
             </p>
         </div>
