--- a/portofolio.html
+++ b/portofolio.html
@@ -69,19 +69,20 @@
         <div class="content">
             <h2 class="content-subhead">Games(Professional work)</h2>
             <p>
-			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game in a Team of 3 programmers and 2 animators. Responsible for Gameplay Programming and Level Design(not published yet)
+			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game for mobile devices in a team of 3 programmers and 2 animators. 
+				Responsible for Gameplay Programming and Level Design(not published yet)
 				<div class="pure-g">
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="Images/crc1.jpg" alt="cracov1500">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
+                    <img class="pure-img-responsive" src="Images/crc2.jpg" alt="cracov1500">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
+                    <img class="pure-img-responsive" src="Images/cracovWgk.jpg" alt="cracov1500">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm8.staticflickr.com/7357/9086701425_fda3024927.jpg" alt="Mountain">
+                    <img class="pure-img-responsive" src="Images/crc3.jpg" alt="cracov1500">
                 </div>
             </div>
 				<BR><BR>
