--- a/portofolio.html
+++ b/portofolio.html
@@ -82,7 +82,7 @@
                     <img class="pure-img-responsive" src="Images/cracovWgk.jpg" alt="cracov1500">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/crc3.jpg" alt="cracov1500">
+                    <img class="pure-img-responsive" src="Images/crc3.png" alt="cracov1500">
                 </div>
             </div>
 				<BR><BR>
