--- a/portofolio.html
+++ b/portofolio.html
@@ -85,8 +85,22 @@
                     <img class="pure-img-responsive" src="Images/crc3.png" alt="cracov1500">
                 </div>
             </div>
-				<BR><BR>
-				
+				<BR>
+				<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--
+				Responsible as a programmer for implementing new tools and new control systems(published)<BR><BR>
+				<div class="pure-g">
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="Images/crc1.jpg" alt="cracov1500">
+                </div>
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="Images/crc2.jpg" alt="cracov1500">
+                </div>
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="Images/cracovWgk.jpg" alt="cracov1500">
+                </div>
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="Images/crc3.png" alt="cracov1500">
+                </div>
             </p>
 
            
