--- a/portofolio.html
+++ b/portofolio.html
@@ -69,8 +69,8 @@
         <div class="content">
             <h2 class="content-subhead">Games(Professional work)</h2>
             <p>
-			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Using Unity to create a Rythmic Music Game for mobile devices in a team of 3 programmers and 2 animators. 
-				Responsible for Gameplay Programming and Level Design(not published yet)
+			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Creating a Music Game for mobile devices in a team of 3 programmers and 2 animators. 
+				Responsible for Gameplay Programming and Level Design using Unity3D(not published yet)
 				<div class="pure-g">
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="Images/crc1.jpg" alt="cracov1500">
@@ -87,20 +87,21 @@
             </div>
 				<BR>
 				<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--
-				Responsible as a programmer for implementing new tools and new control systems(published)<BR><BR>
+				Responsible for implementing new tools and new control systems using Unity3D(published)<BR><BR>
 				<div class="pure-g">
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/crc1.jpg" alt="cracov1500">
+                    <img class="pure-img-responsive" src="Images/sniper1.png" alt="sniper1">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/crc2.jpg" alt="cracov1500">
+                    <img class="pure-img-responsive" src="Images/sniper2.png" alt="sniper2">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/cracovWgk.jpg" alt="cracov1500">
+                    <img class="pure-img-responsive" src="Images/sniper3.png" alt="sniper1">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/crc3.png" alt="cracov1500">
+                    <img class="pure-img-responsive" src="Images/sniper4.png" alt="sniper1">
                 </div>
+				<BR>
             </p>
 
            
