--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="pure-menu-heading" href="#"></a>
 
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="Index">Home</a></li>
 				
                 <li><a href="portofolio">Portofolio</a></li>
 
