--- a/portofolio.html
+++ b/portofolio.html
@@ -48,7 +48,7 @@
             <a class="pure-menu-heading" href="#"></a>
 
             <ul>
-                <li><a href="Index">Home</a></li>
+                <li><a href="index">Home</a></li>
 				
                 <li><a href="/backup/indexBackUp">Portofolio</a></li>
 
