--- a/portofolio.html
+++ b/portofolio.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="index">Home</a></li>
 				
-                <li><a href="/backup/indexBackUp">Portofolio</a></li>
+                <li><a href="portofolio">Portofolio</a></li>
 
                 <li><a href="#">Resume/CV</a></li>
 
