--- a/portofolio.html
+++ b/portofolio.html
@@ -86,7 +86,6 @@
 			</p>
                 </div>
             </div>
-			<p>
 				<A HREF="https://play.google.com/store/apps/details?id=com.fragOut.SnipElite&hl=en" target="_blank">Sniper Tactical</A>--
 				Responsible for implementing new tools and new control systems using Unity3D(published)<BR><BR>
 				
@@ -127,8 +126,8 @@
                 </div>
             </div>
 -->
-<Footer>
-            <h3 class="content-subhead">Contact Info</h3>
+
+            <footer class="content-subhead">Contact Info
             
                 Email: panoslennon@gmail.com <br><br>
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/Facebook.png"
