--- a/portofolio.html
+++ b/portofolio.html
@@ -127,7 +127,7 @@
             </div>
 -->
 
-            <footer class="content-subhead">Contact Info
+            <footer class="content-subhead">Contact Info<br>
             
                 Email: panoslennon@gmail.com <br><br>
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/Facebook.png"
