--- a/portofolio.html
+++ b/portofolio.html
@@ -126,8 +126,8 @@
             </div>
 -->
             <h2 class="content-subhead">Contact Info</h2>
-            
-                Email: panoslennon@gmail.com <br><br>
+            <p>
+                Email: panoslennon@gmail.com 
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/Facebook.png"
 				alt="facebook"
 				width="80" height="80" border="0" /></a> 
