--- a/portofolio.html
+++ b/portofolio.html
@@ -127,7 +127,7 @@
 -->
             <h2 class="content-subhead">Contact Info</h2>
             <p>
-                Email: panoslennon@gmail.com 
+                Email: panoslennon@gmail.com <br><br>
 				<a href="https://www.facebook.com/panos.lennon" target="_blank"><img src="Images/Facebook.png"
 				alt="facebook"
 				width="80" height="80" border="0" /></a> 
