--- a/portofolio.html
+++ b/portofolio.html
@@ -102,6 +102,7 @@
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="Images/sniper4.png" alt="sniper1">
                 </div>
+				</div>
             
 
            
