--- a/portofolio.html
+++ b/portofolio.html
@@ -113,7 +113,7 @@
                     <img class="pure-img-responsive" src="Images/ornot1.png" alt="otnot">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="Images/otnot2.png" alt="ornot">
+                    <img class="pure-img-responsive" src="Images/ornot2.png" alt="ornot">
                 </div>
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="Images/ornot3.png" alt="ornot">
