--- a/portofolio.html
+++ b/portofolio.html
@@ -104,7 +104,7 @@
                 </div>
 				</div>
 				
-		<h2 class="content-subhead">Games(Individual and collaborative projects/prototypes)</h2>
+		<h2 class="content-subhead">Games(Individual projects/prototypes)</h2>
 		 <A HREF="http://gamejolt.com/games/puzzle/or-not/35165/" target="_blank">Or Not</A>-- Game prototype created for the Gravity Jam in a period of 5 days. 
 		 It ranked 1st Place based on votes. Its an FPP game with some weird stuff going on :)
          <br><br>
@@ -157,6 +157,16 @@
                 </div>
 				</div>
 				<br><br>
+		
+		<h2 class="content-subhead">Games(Team projects/prototypes)</h2>
+		<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Additional Programmer in a team of 7 people using XNA/C#. This project won first place at the  the 6th computer games creation contest at Technical University of Lodz(ZTGK 2014)<BR><BR>
+		<embed
+		width="420" height="345"
+		src="https://www.youtube.com/v/U5mKpAnPqNw"
+		type="application/x-shockwave-flash">
+		</embed>
+		<BR><BR>
+		
 
            
 <!--
