--- a/portofolio.html
+++ b/portofolio.html
@@ -167,6 +167,17 @@
 		</embed>
 		<BR><BR>
 		
+		<A HREF="http://www.igf.com/php-bin/entry2014.php?id=1940" target="_blank">Factory 59</A>-- Point n click adventure puzzle solving game based on the town I study and live(Lodz/Poland). It was done as a student project for my second year of studies during the period of 3 mounths in a group of 4 people<BR><BR>
+
+		<embed
+		width="420" height="345"
+		src="http://www.youtube.com/v/IkuQGjZaK_w"
+		type="application/x-shockwave-flash">
+		</embed>
+		<BR><BR>
+		<mark>-Role:</mark> Story , Programming, Level Design, 2D Graphics , Sound
+		<BR><BR><A HREF="https://app.box.com/s/9umc59s7fh9m2yavka3m" target="_blank"><mark>Download PC build</mark></A>
+		
 
            
 <!--
