--- a/portofolio.html
+++ b/portofolio.html
@@ -159,7 +159,7 @@
 				<br><br>
 		
 		<h2 class="content-subhead">Games(Team projects/prototypes)</h2>
-		<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Additional Programmer in a team of 7 people using XNA/C#. This project won first place at the  the 6th computer games creation contest at Technical University of Lodz(ZTGK 2014)<BR><BR>
+		<A HREF="https://www.youtube.com/watch?v=U5mKpAnPqNw" target="_blank">Mimus Dei</A>--Gameplay programmer in a team of 7 people using XNA/C#. This project won first place at the  the 6th computer games creation contest at Technical University of Lodz(ZTGK 2014)<BR><BR>
 		<embed
 		width="420" height="345"
 		src="https://www.youtube.com/v/U5mKpAnPqNw"
