--- a/portofolio.html
+++ b/portofolio.html
@@ -175,8 +175,8 @@
 		type="application/x-shockwave-flash">
 		</embed>
 		<BR><BR>
-		<mark>-Role:</mark> Story , Programming, Level Design, 2D Graphics , Sound
-		<BR><BR><A HREF="https://app.box.com/s/9umc59s7fh9m2yavka3m" target="_blank"><mark>Download PC build</mark></A>
+		Responsible for Story ,Programming ,Level Design ,2D Graphics ,Sound
+		<BR><BR><A HREF="https://app.box.com/s/9umc59s7fh9m2yavka3m" target="_blank">Download PC build</A>
 		
 
            
