--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="content">
             <h2 class="content-subhead">Hello there</h2>
             <p>
-			    I am a Game Dev and a Programmer currently residing in Lodz (Poland). I currently work mostly on Unity (1,5 year of experience)
+			    I am a Game Designer and a Programmer currently residing in Lodz (Poland). I currently work mostly on Unity (1,5 year of experience)
 				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
 				My experience varies from named entity recognition software to non-euclidean level design. You can find me around by my nickname Panos Lennon on social media etc. 
 				<BR><BR>
