--- a/portofolio.html
+++ b/portofolio.html
@@ -52,7 +52,7 @@
 				
                 <li><a href="portofolio">Portofolio</a></li>
 
-                <li><a href="#">Resume/CV</a></li>
+                <li><a href="portofolio.pdf">Resume/CV</a></li>
 
                 <li><a href="#">Press</a></li>
 				
