--- a/portofolio.html
+++ b/portofolio.html
@@ -54,7 +54,7 @@
 
                 <li><a href="portofolio.pdf">Resume/CV</a></li>
 
-                <li><a href="#">Press</a></li>
+                <li><a href="press">Press</a></li>
 				
             </ul>
         </div>
