--- a/press.html
+++ b/press.html
@@ -62,19 +62,17 @@
 
     <div id="main">
         <div class="header">
-            <h1>Welcome </h1>
-            <h2>Panajoti Rriska</h2>
+            <h1>Press </h1>
+            <h2></h2>
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">Hello there</h2>
+            <h2 class="content-subhead"></h2>
             <p>
-			    I am a Game Designer and a Programmer currently residing in Lodz (Poland). I currently work mostly on Unity (1,5 year of experience)
-				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
-				My experience varies from named entity recognition software to non-euclidean level design. You can find me around by my nickname Panos Lennon on social media etc. 
-				<BR><BR>
-				<div id="wrapper" style="width:100%; text-align:center">
-				<img src="Images/panos.png" id="Promo1" height="350" width="500"/>
+			 <A HREF="http://lodz.naszemiasto.pl/artykul/studenci-pisali-gry-komputerowe-rozstrzygnieto-konkurs-na,2345356,art,t,id,tm.html" target="_blank">http://lodz.naszemiasto.pl/artykul/studenci-pisali-gry-komputerowe-rozstrzygnieto-konkurs-na,2345356,art,t,id,tm.html</A>-- 
+			 -2014
+			 <br><br>
+			 <A HREF="http://www.filmschool.lodz.pl/news/405,cracov-1500-na-konferencji-gier.html" target="_blank">http://www.filmschool.lodz.pl/news/405,cracov-1500-na-konferencji-gier.html</A>-- -2014
 				</div>
             </p>
 
