--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				
                 <li><a href="portofolio">Portofolio</a></li>
 
-                <li><a href="portofolio.pdf">Resume/CV</a></li>
+                <li><a href="portofolio.pdf" target="_blank">Resume/CV</a></li>
 
                 <li><a href="press">Press</a></li>
 				
