--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <div class="content">
             <h2 class="content-subhead">Hello there</h2>
             <p>
-			    I am a Game Designer and a Programmer currently residing in Lodz (Poland). I currently work mostly on Unity (1,5 year of experience)
+			    Thanks for visiting my website. I am a Game Designer and a Programmer currently residing in Lodz (Poland), working mostly on Unity (1,5 year of experience)
 				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
-				My experience varies from named entity recognition software to non-euclidean level design. You can find me around by my nickname Panos Lennon on social media etc. 
+				My experience varies from Named Entity Recognition software to Non-Euclidean level design. You can find me around by my nickname Panos Lennon on social media etc. 
 				<BR><BR>
 				<div id="wrapper" style="width:100%; text-align:center">
 				<img src="Images/panos.png" id="Promo1" height="350" width="500"/>
