--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">Hello there</h2>
+            <h2 class="content-subhead"></h2>
             <p>
-			    Thanks for visiting my website. I am a Game Designer and a Programmer currently residing in Lodz, working mostly recently on Unity
-				so I make most of my projects on it. I also love GameJams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
-				My experience varies from Named Entity Recognition software to Non-Euclidean level design. You can find me around by my nickname Panos Lennon on social media etc.
+			    I am a Game Designer and a Programmer, currently residing in Lodz. I love Game Jams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
+				My experience varies from Named Entity Recognition software to Non-Euclidean Level Design. You can find me around by the name Panos Lennon on social media etc.
 				<BR><BR>
 				<div id="wrapper" style="width:100%; text-align:center">
 				<img src="Images/panos.png" id="Promo1" height="350" width="500"/>
