--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div class="content">
             <h2 class="content-subhead"></h2>
             <p>
-			    I am a Game Designer and a Programmer, currently residing in Lodz. I love Game Jams and making weird music from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here</a>).
-				My experience varies from Named Entity Recognition software to Non-Euclidean Level Design. You can find me around by the name Panos Lennon on social media etc.
+			    Hello there. Thanks for visiting my website. My name is Panos (or Panajoti). I am a Game\Level Designer and a Programmer, currently residing in Lodz(Poland). I love participating in Game Jams and cooperating/sharing my work with other people. I also make very weird music for fun from time to time (<a href="https://soundcloud.com/panos-lennon" target="_blank" alt="Side Menu CSS">You can check it out here but its pretty weird stuff</a>).
+				My experience varies from Named Entity Recognition software to Non-Euclidean Level Design. Currently I am working as a Level Designer for a game called SUPERHOT.
 				<BR><BR>
 				<div id="wrapper" style="width:100%; text-align:center">
 				<img src="Images/panos.png" id="Promo1" height="350" width="500"/>
