--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="main">
         <div class="header">
             <h1>Welcome </h1>
-            <h2>Panajoti Rriska</h2>
+            <h2>Panos Rriska</h2>
         </div>
 
         <div class="content">
