--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <!--
 	<h2 class="content-subhead">Now Let's Speak Some Latin</h2>
             <p>
-                mpla mpla
+                mpla 
             </p>
             <div class="pure-g">
                 <div class="pure-u-1-4">
