--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <div id="main">
         <div class="header">
-            <h1>Welcome </h1>
-            <h2>Panos Rriska</h2>
+            <h1>Panos Rriska </h1>
+            <h2>Level Designer</h2>
         </div>
 
         <div class="content">
@@ -73,7 +73,7 @@
 				My experience varies from Named Entity Recognition software to Non-Euclidean Level Design. Currently I am working as a Game\Level Designer for a game called SUPERHOT.
 				<BR><BR>
 				<div id="wrapper" style="width:100%; text-align:center">
-				<img src="Images/panos.png" id="Promo1" height="350" width="500"/>
+				<img src="Images/panos.png" id="Promo1" height="350" width="350"/>
 				</div>
             </p>
 
