--- a/portofolio.html
+++ b/portofolio.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+<meta name="description" content="">
 
-    <title>Panajoti Rriska</title>
+    <title>Panos Rriska</title>
 
    
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
@@ -48,11 +48,11 @@
             <a class="pure-menu-heading" href="#"></a>
 
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a href="index">About me</a></li>
 				
                 <li><a href="portofolio">Portofolio</a></li>
 
-                <li><a href="portofolio.pdf" target="_blank">Resume/CV</a></li>
+                <li><a href="portofolio2.pdf" target="_blank">Resume/CV</a></li>
 
                 <li><a href="press">Press</a></li>
 				
