--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				My experience varies from Named Entity Recognition software to Non-Euclidean Level Design. Currently I am working as a Game\Level Designer for a game called SUPERHOT.
 				<BR><BR>
 				<div id="wrapper" style="width:100%; text-align:center">
-				<img src="Images/panos.png" id="Promo1" height="350" width="350"/>
+				<img src="Images/panos.png" id="Promo1" height="256" width="256/>
 				</div>
             </p>
 
