--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="main">
         <div class="header">
             <h1>Panos Rriska </h1>
-            <h2>Level Designer</h2>
+            <h2>Level Designer and Programmer</h2>
         </div>
 
         <div class="content">
