--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
             <a class="pure-menu-heading" href="#"></a>
 
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a href="index">About Me</a></li>
 				
-                <li><a href="portofolio">Portofolio</a></li>
+                <li><a href="Proffesional Work">Proffesional Work</a></li>
+				
+				<li><a href="Personal Projects">Personal Projects</a></li>
 
                 <li><a href="portofolio.pdf" target="_blank">Resume/CV</a></li>
 
