--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <ul>
                 <li><a href="index">About Me</a></li>
 				
-                <li><a href="Proffesional Work">professional</a></li>
+                <li><a href="professional">Proffesional Work</a></li>
 				
-				<li><a href="Personal Projects">personal</a></li>
+				<li><a href="personal">Personal Projects</a></li>
 
                 <li><a href="portofolio.pdf" target="_blank">Resume/CV</a></li>
 
