--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="index">About Me</a></li>
 				
-                <li><a href="Projects"> Works </a></li>
+                <li><a href="Works"> Works </a></li>
 				
 			<!--	<li><a href="personal">Personal Projects</a></li>
 
