--- a/works.html
+++ b/works.html
@@ -71,10 +71,14 @@
 
         <div class="content">
             <h2 class="content-subhead">Games(Professional work)</h2>
+			<A HREF="http://cracov1500.wordpress.com/" target="_blank">SUPERHOT</A>-- Responsible for designing and building levels. 
+			From level layouts on paper to final release. Designing and creating gameplay events(flow, narrative scenes, objectives, enemy placement, 
+			animation events) by using scripting/programming knowledge and the game engine tools. Asset placement and dressing of 
+			levels in collaboration with the Art team.. 
             <p>
 			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Creating a Music Game for mobile devices in a team of 3 programmers and 2 animators. 
 				Responsible for Gameplay Programming and Level Design using Unity3D(not published yet)
-				<div class="pure-g">
+			<div class="pure-g">
                 <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="Images/crc1.jpg" alt="cracov1500">
                 </div>
