--- a/works.html
+++ b/works.html
@@ -71,10 +71,20 @@
 
         <div class="content">
             <h2 class="content-subhead">Games(Professional work)</h2>
-			<A HREF="http://cracov1500.wordpress.com/" target="_blank">SUPERHOT</A>-- Responsible for designing and building levels. 
-			From level layouts on paper to final release. Designing and creating gameplay events(flow, narrative scenes, objectives, enemy placement, 
-			animation events) by using scripting/programming knowledge and the game engine tools. Asset placement and dressing of 
-			levels in collaboration with the Art team.. 
+			<A HREF="http://store.steampowered.com/app/322500/SUPERHOT/" target="_blank">SUPERHOT</A>-- Responsible for designing and building levels. 
+			From level layouts on paper to final release. Designing and creating gameplay events(flow, narrative scenes, objectives, enemy placement, animation events) by 
+			using scripting/programming knowledge and the game engine tools. 
+			Asset placement and dressing of levels in collaboration with the Art team.
+			
+			<embed
+		width="420" height="345"
+		src="https://www.youtube.com/watch?v=A1jothqmqHw"
+		type="application/x-shockwave-flash">
+		</embed>
+			
+			
+			<A HREF="http://store.steampowered.com/app/322500/SUPERHOT/" target="_blank">SUPERHOT VR</A>-- Designing and building levels using VR technologies. Prototyping gameplay sequencing in VR and game controls as well as transversing through space
+and pacing gameplay flow.			
             <p>
 			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Creating a Music Game for mobile devices in a team of 3 programmers and 2 animators. 
 				Responsible for Gameplay Programming and Level Design using Unity3D(not published yet)
