--- a/works.html
+++ b/works.html
@@ -76,16 +76,22 @@
 			using scripting/programming knowledge and the game engine tools. 
 			Asset placement and dressing of levels in collaboration with the Art team.<BR><BR>
 			
-		<embed
-		width="420" height="345"
-		src="https://www.youtube.com/v/vrS86l_CtAY"
-		type="application/x-shockwave-flash">
-		</embed>
-		<BR><BR>
+			<embed
+			width="560" height="315"
+			src="https://www.youtube.com/v/vrS86l_CtAY"
+			type="application/x-shockwave-flash">
+			</embed>
+			<BR><BR>
 			
 			
 			<A HREF="http://store.steampowered.com/app/322500/SUPERHOT/" target="_blank">SUPERHOT VR</A>-- Designing and building levels using VR technologies. 
-			Prototyping gameplay sequencing in VR.
+			Prototyping gameplay sequencing in VR.<BR><BR>
+			<embed
+			width="560" height="315"
+			src="https://www.youtube.com/v/vrS86l_CtAY"
+			type="application/x-shockwave-flash">
+			</embed>
+			<BR><BR>
             <p>
 			    <A HREF="http://cracov1500.wordpress.com/" target="_blank">Cracov 1500</A>-- Creating a Music Game for mobile devices in a team of 3 programmers and 2 animators. 
 				Responsible for Gameplay Programming and Level Design using Unity3D(not published yet)
