--- a/works.html
+++ b/works.html
@@ -70,9 +70,9 @@
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">Games(Professional work)</h2>
+            <h2 class="content-subhead">Games (Professional work)</h2>
 			<A HREF="http://store.steampowered.com/app/322500/SUPERHOT/" target="_blank">SUPERHOT</A>-- Responsible for designing and building levels. 
-			From level layouts on paper to final release. Designing and creating gameplay events(flow, narrative scenes, objectives, enemy placement, animation events) by 
+			From level layouts on paper to final release. Designing and creating gameplay events (flow, narrative scenes, objectives, enemy placement, animation events) by 
 			using scripting/programming knowledge and the game engine tools. 
 			Asset placement and dressing of levels in collaboration with the Art team.<BR><BR>
 			
@@ -85,10 +85,10 @@
 			
 			
 			<A HREF="http://store.steampowered.com/app/322500/SUPERHOT/" target="_blank">SUPERHOT VR</A>-- Designing and building levels using VR technologies. 
-			Prototyping gameplay sequencing in VR.<BR><BR>
+			<BR><BR>
 			<embed
 			width="560" height="315"
-			src="https://www.youtube.com/v/vrS86l_CtAY"
+			src="https://www.youtube.com/v/pzG7Wc6mbwE"
 			type="application/x-shockwave-flash">
 			</embed>
 			<BR><BR>
@@ -128,7 +128,7 @@
                 </div>
 				</div>
 				
-		<h2 class="content-subhead">Games(Individual projects/prototypes)</h2>
+		<h2 class="content-subhead">Games (Individual projects/prototypes)</h2>
 		 <A HREF="http://gamejolt.com/games/puzzle/or-not/35165/" target="_blank">Or Not</A>-- Game prototype created for the Gravity Jam in a period of 5 days. 
 		 It ranked 1st Place based on votes. Its an FPP game with some weird stuff going on :)
          <br><br>
