--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				
 			<!--	<li><a href="personal">Personal Projects</a></li>-->
 
-                <li><a href="portofolio.pdf" target="_blank">Resume/CV</a></li>
+                <li><a href="Panos-Rriska-LevelDesigner.pdf" target="_blank">Resume/CV</a></li>
 
                 <li><a href="press">Press</a></li>
 				
