--- a/works.html
+++ b/works.html
@@ -65,7 +65,7 @@
 
     <div id="main">
         <div class="header">
-            <h1>Portofolio </h1>
+            <h1>Portfolio </h1>
             <h2></h2>
         </div>
 
